--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iPhone</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <title>Tela de Exemplo</title>
+    <link rel="stylesheet" href="style.css"> </head>
 <body>
     <div class="container">
-        <img src="iphone-17-pro-max-4 1.png" alt="iPhone Image">
-        <div class="content">
-            <h1>Ganhe um iPhone 17 Pro Max de graça</h1>
-            <button>Entrar</button>
-            <button>Cadastrar</button>
+        <div class="content-box">
+            <h1>Ganhe um <br>iPhone 17 Pro <br>Max de graça</h1>
+            <div class="button-group">
+                <button class="btn primary">Entrar</button>
+                <button class="btn primary">Cadastrar</button>
+            </div>
         </div>
     </div>
-    <div class="teste"></div>
 </body>
 </html>
