--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela de Exemplo</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <title>iPhone</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="script.js">
+</head>
 <body>
     <div class="container">
         <div class="content-box">
