alterações para db

--- a/cadastrar.html
+++ b/cadastrar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="script.js">
 </head>
 <body>
     <div class="content-box">
@@ -17,10 +18,9 @@
         <input type="tel" placeholder="Código de segurança" class="form-input">
         <input type="text" placeholder="Validade" class="form-input">
         <input type="password" placeholder="Senha" class="form-input" required>
-
-        <button type="submit" class="btn primary full-width">Cadastrar</button>
+        <button type="submit" class="btn primary full-width" id="cadastrar">Cadastrar</button>
     </form>
-    <a href="#" class="footer-link">Já fiz meu cadastro</a>
+    <a href="entrar.html" class="footer-link">Já fiz meu cadastro</a>
 </div>
 </body>
 </html>
