--- a/entrar.html
+++ b/entrar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="script.js">
 </head>
 <body>
     <div class="content-box">
@@ -12,9 +13,9 @@
     <form class="register-form">
         <input type="email" placeholder="Email" class="form-input" required>
         <input type="password" placeholder="Senha" class="form-input" required>
-        <button type="submit" class="btn primary full-width">Entrar</button>
+        <button type="submit" id="entrar" class="btn primary full-width">Entrar</button>
     </form>
-    <a href="#" class="footer-link">Não fiz o meu cadastro</a>
+    <a href="cadastrar.html" class="footer-link">Não fiz o meu cadastro</a>
 </div>
 </body>
 </html>
