--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
         <div class="content-box">
             <h1>Ganhe um <br>iPhone 17 Pro <br>Max de graça</h1>
             <div class="button-group">
-                <button class="btn primary">Entrar</button>
-                <button class="btn primary">Cadastrar</button>
+                <a href="entrar.html">
+                    <button class="btn primary">Entrar</button>
+                </a>
+                <a href="cadastrar.html">
+                 <button class="btn primary">Cadastrar</button>
+                </a>
             </div>
         </div>
     </div>
