--- a/cadastrar.html
+++ b/cadastrar.html
@@ -21,6 +21,7 @@
         <button type="submit" class="btn primary full-width" id="cadastrar">Cadastrar</button>
     </form>
     <a href="entrar.html" class="footer-link">Já fiz meu cadastro</a>
+    <script src="script.js"></script>
 </div>
 </body>
 </html>
