--- a/entrar.html
+++ b/entrar.html
@@ -16,6 +16,7 @@
         <button type="submit" id="entrar" class="btn primary full-width">Entrar</button>
     </form>
     <a href="cadastrar.html" class="footer-link">Não fiz o meu cadastro</a>
+    <script src="script.js"></script>
 </div>
 </body>
 </html>
